--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1677,7 +1677,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffebe0;
+  background: #41ff0d;
 }
 .links-of-blogroll {
   font-size: 13px;
