update deploy type from git to rsync

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1677,7 +1677,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #45c8e4;
+  background: #ff696a;
 }
 .links-of-blogroll {
   font-size: 13px;
